--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   cached_network_image: ^3.2.0
   rename: ^2.0.1
   timeline_tile: ^2.0.0
-
-
+  firebase_database: ^9.0.12
+  firebase_core: ^1.15.0
 
 
 dev_dependencies:
