--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_database: ^9.0.12
   firebase_core: ^1.15.0
   sqflite: ^2.0.2+1
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
